<resources>
    <string name="app_name">CircularTimerClockExample</string>

    <string name="start_hour_text_view_hint">Start hour</string>
    <string name="start_minute_text_view_hint">Start minute</string>
    <string name="end_hour_text_view_hint">End hour</string>
    <string name="end_minute_text_view_hint">End minute</string>
    <string name="set_start_time_button_text">Set start time</string>
    <string name="set_end_time_button_text">Set end time</string>
</resources>
